🔧 Fix truncation in section 1, fix ref 5 citation (OCTOPUS)

--- a/content/posts/2026-02-17-건설-도메인에서의-강화학습-활용-빌딩-hvac-에너지-최적화를-중심으로-5편-논문-리뷰.md
+++ b/content/posts/2026-02-17-건설-도메인에서의-강화학습-활용-빌딩-hvac-에너지-최적화를-중심으로-5편-논문-리뷰.md
@@ -78,7 +78,8 @@ RL은 이 두 가지 한계를 동시에 우회합니다.
 
 그렇다면 건설 도메인에서는 왜 특히 모델 프리 RL이 매력적일까요? 개인적으로 가장 큰 이유는 건물마다 환경이 완전히 다르다는 점이라고 생각합니다. 같은 설계도로 지어진 건물이라도 향(orientation), 외피 노후도, 설비 사양, 입주자 행동 패턴이 제각각입니다. 물리 모델 기반 MPC라면 건물마다 모델을 새로 수립하고 튜닝해야 하지만, 모델 프리 RL은 센서 데이터만 확보되면 동일한 알고리즘 파이프라인을 재활용할 수 있습니다.
 
-계절 전환이나 리모델링 
+계절 전환이나 리모델링으로 건물 특성이 바뀌더라도 에이전트가 스스로 적응할 수 있다는 점도 건설 현장에서는 큰 강점입니다. AWS 관점에서 보면, IoT Core로 BMS 센서 데이터를 수집하고 SageMaker RL로 학습 파이프라인을 구성하는 것이 자연스러운 구현 경로가 됩니다.
+
 
 ## 2. 종합 서베이로 보는 HVAC RL 연구 지형 — 논문 ②
 
@@ -155,7 +156,7 @@ obs, info = env.reset()
 
 ## References
 
-1. Drgona, J., Smarra, F., Baldi, S., et al. (2025). "Lessons learned from field demonstrations of model predictive control and reinforcement learning for HVAC control." *arXiv preprint*, arXiv:2503.05022. [https://arxiv.org/abs/2503.05022](https://arxiv.org/abs/2503.05022)
+1. Henze, G., et al. (2025). "Lessons learned from field demonstrations of model predictive control and reinforcement learning for HVAC control." *arXiv preprint*, arXiv:2503.05022. [https://arxiv.org/abs/2503.05022](https://arxiv.org/abs/2503.05022)
 
 2. Yu, L., Qin, S., Zhang, M., Shen, C., Jiang, T., & Guan, X. (2024). "Reinforcement learning for HVAC control in intelligent buildings: A technical and conceptual review." *Journal of Building Engineering*, ScienceDirect. [https://shs.hal.science/LINEACT-CESI/hal-04635092v1](https://shs.hal.science/LINEACT-CESI/hal-04635092v1)
 
@@ -163,7 +164,7 @@ obs, info = env.reset()
 
 4. Yu, L., et al. (2025). "Multi-agent deep reinforcement learning based HVAC control for multi-zone buildings." *Energy and Buildings*. [https://doi.org/10.1016/j.enbuild.2024.115241](https://doi.org/10.1016/j.enbuild.2024.115241)
 
-5. Chen, B., et al. (2024). "OCTOPUS: Occupancy-driven and Controllable Thermal Optimization for Unified Smart buildings." *ACM BuildSys 2024*. [https://www.semanticscholar.org/paper/OCTOPUS:-Deep-Reinforcement-Learning-for-Holistic-Ding-Du/4c2798b8618db6af5fc9f85c1097c575ec77c4a0](https://www.semanticscholar.org/paper/OCTOPUS:-Deep-Reinforcement-Learning-for-Holistic-Ding-Du/4c2798b8618db6af5fc9f85c1097c575ec77c4a0)
+5. Ding, X., Du, W., & Cerpa, A. (2024). "Exploring Deep Reinforcement Learning for Holistic Smart Building Control." *ACM Transactions on Sensor Networks*. [https://www.semanticscholar.org/paper/OCTOPUS:-Deep-Reinforcement-Learning-for-Holistic-Ding-Du/4c2798b8618db6af5fc9f85c1097c575ec77c4a0](https://www.semanticscholar.org/paper/OCTOPUS:-Deep-Reinforcement-Learning-for-Holistic-Ding-Du/4c2798b8618db6af5fc9f85c1097c575ec77c4a0)
 
 6. Zhang, Z., Chong, A., Pan, Y., Zhang, C., & Lam, K. P. (2019). "Whole building energy model for HVAC optimal control: A practical framework based on deep reinforcement learning." *Energy and Buildings*, 199, 472–490. [https://doi.org/10.1016/j.enbuild.2019.07.029](https://doi.org/10.1016/j.enbuild.2019.07.029)
 
