🔗 Fix ref 7: Sutton&Barto URL (incompleteideas.net down → Stanford PDF)

--- a/content/posts/2026-02-17-건설-도메인에서의-강화학습-활용-빌딩-hvac-에너지-최적화를-중심으로-5편-논문-리뷰.md
+++ b/content/posts/2026-02-17-건설-도메인에서의-강화학습-활용-빌딩-hvac-에너지-최적화를-중심으로-5편-논문-리뷰.md
@@ -168,7 +168,7 @@ obs, info = env.reset()
 
 6. Zhang, Z., Chong, A., Pan, Y., Zhang, C., & Lam, K. P. (2019). "Whole building energy model for HVAC optimal control: A practical framework based on deep reinforcement learning." *Energy and Buildings*, 199, 472–490. [https://doi.org/10.1016/j.enbuild.2019.07.029](https://doi.org/10.1016/j.enbuild.2019.07.029)
 
-7. Sutton, R. S. & Barto, A. G. (2018). *Reinforcement Learning: An Introduction* (2nd ed.). MIT Press. 강화학습 기초 이론(MDP, 보상함수, 정책 등)의 표준 교과서. [http://incompleteideas.net/book/the-book-2nd.html](http://incompleteideas.net/book/the-book-2nd.html)
+7. Sutton, R. S. & Barto, A. G. (2018). *Reinforcement Learning: An Introduction* (2nd ed.). MIT Press. 강화학습 기초 이론(MDP, 보상함수, 정책 등)의 표준 교과서. [https://web.stanford.edu/class/psych209/Readings/SuttonBartoIPRLBook2ndEd.pdf](https://web.stanford.edu/class/psych209/Readings/SuttonBartoIPRLBook2ndEd.pdf)
 
 8. Amazon SageMaker RL 공식 문서 — SageMaker 환경에서 강화학습 워크로드를 구성하고 학습시키는 방법에 대한 가이드. [https://docs.aws.amazon.com/sagemaker/latest/dg/reinforcement-learning.html](https://docs.aws.amazon.com/sagemaker/latest/dg/reinforcement-learning.html)
 
